--- a/html/index.html
+++ b/html/index.html
@@ -22,12 +22,12 @@
   <body>
     <main>
       <div class="container">
-        <h1>Counter</h1>
+        <h1>counter</h1>
         <span id="value">0</span>
         <div class="button-container">
-          <button class="btn increase">Increasing Nb</button>
-          <button class="btn reset">Reset Nb</button>
-          <button class="btn decrease">Decreasing Nb</button>
+          <button class="btn increase">increasing nb</button>
+          <button class="btn reset">Reset nb</button>
+          <button class="btn decrease">Decreasing nb</button>
         </div>
       </div>
     </main>
