--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="../css/main.css" />
-    <!-- <link rel="stylesheet" href="../css/normalize.css" /> -->
+    <link rel="stylesheet" href="../css/normalize.css" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="../css/all.min.css" />
     <!-- Google Font -->
